# unzip-traversable

./: .travis.yml  CHANGELOG.md  LICENSE  unzip-traversable.cabal
.github/workflows/: haskell-ci.yml
src/Data/Traversable/: Unzip.hs
src/Data/Traversable/Unzip/: Coerce.hs  EagerPair.hs  LazyPair.hs
test/: Main.hs
