cabal-version:      3.0
name:               unzip-traversable
version:            0.1.0.0
synopsis:           Unzip functions for general Traversable containers
-- description:
homepage:           https://github.com/treeowl/unzip-traversable
license:            BSD-2-Clause
license-file:       LICENSE
author:             David Feuer
maintainer:         David.Feuer@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:
tested-with:
  GHC ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.8 ||
      ==9.4.8 || ==9.6.6 || ==9.8.4 || ==9.10.1 || ==9.12.1

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Data.Traversable.Unzip
    other-modules:
        Data.Traversable.Unzip.EagerPair
        Data.Traversable.Unzip.LazyPair
        Data.Traversable.Unzip.Coerce
    -- other-extensions:
    build-depends:    base >=4.10.1.0
                      -- biliftA2 became a Biapplicative method in bifunctors-5.5.3,
                      -- so we require that to avoid a mess of CPP.
                    , bifunctors >= 5.5.3
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite unzip-traversable-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.10.1.0,
        bifunctors >= 5.5.3,
        unzip-traversable
